# battista

./: .gitignore  Cargo.toml  package-lock.json
house_prototype/: Cargo.toml
house_prototype/src/: handler.rs
house_prototype/web/: catlike_maze.html  graph_prototype.html  index.html  recursive_maze.html
message_server/: Cargo.toml  Makefile
message_server/src/: main.rs  messages.rs
rust_server/: Cargo.toml  webtest.html
rust_server/src/: handler.rs  main.rs  map.rs  ws.rs
rust_server/src/map/: map_generator.rs  map_responder.rs  mod.rs
rust_server_2/: Cargo.toml
rust_server_2/src/: handler.rs  main.rs  ws.rs
rust_server_2/src/map/: map_generator.rs  map_responder.rs  mod.rs
rust_server_2/www/static/: webtest.html  webtest.js
src/: main.rs
web/: index.html  styles.css
