[package]
name = "battista"
version = "0.1.0"
authors = ["Preston Hale <phale@firststrikegames.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
futures = "0.3"
rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"