[package]
name = "my_lambda_function"
version = "0.1.0"
authors = ["Preston Hale <the.prestonhale@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
lambda_runtime = "0.3"
lambda_http = "0.3"
serde = "1.0"
serde_json= "1.0"
rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"
uuid = { version = "0.8", features = ["v4"] }
rand = "0.7.2"


[[bin]]
name = "bootstrap"
path = "src/main.rs"