[package]
name = "battista_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = { version = "0.1.8"}
warp = "0.3.2"
serde = {version = "1.0.81", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
futures = { version = "0.3.21", default-features = false }
uuid = { version = "0.4", features = ["serde", "v4"] }

[profile.release]
debug = true